[package]
name = "nrf-template"
version = "0.1.0"
authors = ["oddlama <oddlama@oddlama.org>"]
edition = "2021"

description = "❄️ 🦀 A template for embedded rust development for the nRF52840 with embassy featuring reproducible builds with nix"
documentation = "https://github.com/oddlama/nrf-template"
homepage = "https://github.com/oddlama/nrf-template"
readme = "README.md"
repository = "https://github.com/oddlama/nrf-template"
keywords = ["nrf52840", "embassy"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "e70c531d3d28565b6926d99d8e977c4df6c13c60", features = [ "defmt", "nightly", ] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e70c531d3d28565b6926d99d8e977c4df6c13c60", features = [ "defmt", "nightly", ] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e70c531d3d28565b6926d99d8e977c4df6c13c60", features = [ "defmt", "nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers" ] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e70c531d3d28565b6926d99d8e977c4df6c13c60", features = [ "defmt", "nightly", "defmt-timestamp-uptime", "unstable-traits" ] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "e70c531d3d28565b6926d99d8e977c4df6c13c60", features = [ "defmt", "nightly", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "unstable-traits", "time" ] }

# Embedded core-level crates
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4"
embedded-hal = "1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
